# astock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  data_source.md  feature_request.md
src/astock/: __init__.py  cli.py  data.py  display.py  watchlist.py
tests/: test_cli.py  test_data.py  test_display.py  test_version.py  test_watchlist.py
