[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astock"
version = "0.1.0"
description = "A-share stock terminal toolkit — quotes, screening & ranking from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "youmengde"}]
keywords = ["stock", "a-share", "china", "cli", "terminal", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "akshare>=1.12",
    "rich>=13.0",
    "click>=8.0",
    "pandas>=1.5",
]

[project.scripts]
astock = "astock.cli:cli"

[project.urls]
Homepage = "https://github.com/youmengde/astock"
Repository = "https://github.com/youmengde/astock"

[tool.setuptools.packages.find]
where = ["src"]
