[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astock"
version = "0.1.1"
description = "A-share stock terminal toolkit — quotes, screening & ranking from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "youmengde"}]
keywords = ["stock", "a-share", "china", "cli", "terminal", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "akshare>=1.12",
    "rich>=13.0",
    "click>=8.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
astock = "astock.cli:cli"

[project.urls]
Homepage = "https://github.com/youmengde/astock"
Repository = "https://github.com/youmengde/astock"
Issues = "https://github.com/youmengde/astock/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
